# mcp-pdf-extract

./: .gitignore  README.md  pyproject.toml
src/mcp_pdf_extract/: __init__.py  __main__.py  pdf_utils.py  server.py
tests/: conftest.py  test_pdf_utils.py  test_server.py
