[project]
name = "mcp-pdf-extract"
version = "0.1.0"
description = "MCP server exposing PDF extraction tools (text, tables, metadata, search) for use with mcp-ollama-host and other MCP clients."
readme = "README.md"
authors = [
    { name = "Roman Slovák", email = "roman.slovak@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pdfplumber>=0.11",
    "pypdf>=4.0",
]

[project.scripts]
mcp-pdf-extract = "mcp_pdf_extract.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.5.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
